# live-runtime

./: .gitignore  README.md  package.json
.github/workflows/: ci.yml
apps/dashboard/: index.html  package.json
apps/dashboard/src/: App.tsx  alpha-polish.css  intelligence.css  layout-fix.css  main.tsx  scrollbars.css  skills.css  styles.css  voice-settings.css
apps/dashboard/src/components/: ChatComposer.tsx  CompanionModeController.tsx  CompanionPanel.tsx  HelpTip.tsx  IntelligenceStatus.tsx  MessageBubble.tsx  SettingsResetInjector.tsx  SignalCard.tsx  UiBrand.tsx  WindowGlyphs.tsx  companion-final-polish.css  companion-window.css
apps/dashboard/src/hooks/: useLiveChat.ts  useRuntimeChat.ts
apps/dashboard/src/lib/: controlBridge.ts  journalBridge.ts  semantic.ts  tauriBridge.ts
apps/dashboard/src/pages/: AutomationView.tsx  ChatPage.tsx  ControlPage.tsx  SettingsView.tsx  SkillsView.tsx  control-page.css
apps/dashboard/src/views/: IntelView.tsx
apps/dashboard/src/windows/: CompanionWindow.tsx
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  main.rs  memory.rs  runtime.rs  speech.rs  tray.rs
docs/: ARCHITECTURE.md  INTELLIGENCE_ARCHITECTURE.md  ROADMAP.md  SECURITY.md  SKILLS_AND_SEARCH.md  computer-control-foundation.md  jarvis-command-control-plan.md  memory-history-classifier.md
