[package]
name = "live-runtime-desktop"
version = "0.1.0"
description = "Tray-native local AI runtime powered by Ollama"
authors = ["Amaan Syed"]
edition = "2021"

[lib]
name = "live_runtime_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
